--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -416,63 +416,6 @@ width: 60%;
    
     
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.zoom {
-    padding: 50px;
-
-    transition: transform .5s;
-    /*Animation*/
-
-    Width: 100%;
-    height: auto;
-    margin: 0 auto;
-}
-
-.zoom:hover {
-    transform: scale(1.1);
-}
-
-
-
-
-
-
-
-
-
-
-
-
 /* footer*/
 
 footer {
@@ -491,8 +434,6 @@ footer a {
     color: bisque;
     padding: 5px 30px;
 }
-
-
 
 
 .social-networks {
@@ -642,6 +583,20 @@ footer > h5{
     border-radius: 5%;
 }
 
+.zoom {
+    padding: 50px;
+
+    transition: transform .2s;
+    /*Animation*/
+
+    Width: 100%;
+    height: auto;
+    margin: 0 auto;
+}
+
+.zoom:hover {
+    transform: scale(1.1);
+}
 
  
 
@@ -814,328 +769,77 @@ footer > h5{
     border-color: 2px solid darkred;
 }
 
+/*for screens from 1200px and down*/
 
-
-
-
-
-/*  ++++++++FOR SCREENS 426 and down+++++++++
-
-@media screen and (max-width: 426px) {
-    #logo {
-        font-size: 180%;
-        margin: 5px;
-
-    }
-
-    #menu li {
-        font-size: 50%;
-        letter-spacing:none;
-        line-height: 5px;
-        text-transform:capitalise;
-        margin:0 10px;
-        padding:0;
-        float:left;
-
-    }
-
-    h1 {
-        Padding: 5px;
-    }
-
-    #menu a:hover {
-
-        border-bottom: 2px solid #fff;
-    }
-
-    #menu li {
-        margin:0 20px;
-        
-    }
-
-
-    h2,
-    h3 {
-        letter-spacing: 1px;
-        padding-bottom: 10px;
-    }
-
-    #info-text {
-        font-size: 130%;
-        text-transform: capitalize;
-        color: rgba(94, 36, 36, 1);
-        background-color: transparent;
-        border: none;
-        position: absolute;
-    }
-
-    #info-text>h2 {
-
-        color: rgba(94, 36, 36, 1);
-    }
-#lackeen-intro{
-
-    text-align: center;
+h2{font-size:200%;
 }
-    #lackeen-summary {
-        text-align: center;
-        margin: 0 50px 0 20px;
-        padding: 0;
-        height: 1300px;
-    }
 
+h3 {
+    font-size:150%;
+}
+#defence-outer h3{
+    padding-top: 5px;
+}
     
-
-    #left-about-heading {
-
-        text-align:center;
-        margin-right: 20px;
-    }
-
-    .right-about-heading h2{
-        text-align:center;
-    }
-    .right-about-heading  p{
-        text-align:center;
-    }
-
-    #left-about,
-    #right-about {
-    width:100%;
-        margin: 0 auto;
-        Padding: 0 auto;
-
-    }
-
-   
-
-    #visit-intro {
-        text-align: center;
-        margin: 0 auto;
-        padding-bottom: 20px;
-        font-size: 200%;
-
-    }
-    hr {
-        border-top: 1px solid bisque;
-        width: 100%;
-        margin: 5px 0;
-    }
-
-    #location {
-        height: 600px;
-    }
-
-    #map,
-    #directions {
-        width: 100%;
-        margin-left: 5px;
-        padding: 0 auto;
-    }
-    #directions {
-        text-align: center;
-    }
-
-    #info-text-window {
-        font-size: 90%;
-        padding: 0;
-        width: 60%;
-        margin: 0 auto;
-        left: 25px;
-        top: 600px;
-    }
-
-    #info-text-mach {
-        font-size: 90%;
-        padding: 0;
-        width: 70%;
-        margin: 0 auto;
-        top: 300px;
-        right: 10px;
-    }
-
-    #info-text-intro {
-        font-size: 95%;
-        padding: 0;
-        height: 210px;
-        width: 90%;
-        top: 10px;
-        right:30px;
-        margin: 0 auto 30;
-        clear: left;
-    }
-
-    #info-text-door {
-        font-size: 90%;
-        padding: 0;
-        height: 200px;
-        width: 60%;
-        margin: 0 auto;
-        left: 50px;
-        bottom: 90px;
-
-    }
-
-    #info-text-window>h2,
-    #info-text-mach>h2,
-    #info-text-intro>h2,
-    #info-text-door>h2 {
-        text-transform: capitalize;
-        text-decoration-line: 1px;
-        letter-spacing: 0;
-    }
-
-    .stowe-missal-background {
-        clear: left;
-        background: url("../images/sm-cover-both.jpg");
-        background-size: cover;
-        background-position-x: 50%;
-        background-position-y: 0%;
-        height: 400px;
-        width: 100%;
-    }
+#sm-title{
+    background-color: transparent;
+    border:none;
+}
 
 
-    #info-text-sm{
-        Padding:0;
-        left: 50px;
-    }
-    #info-text-sm h2,
-    #info-text-sm h3 {
+/*for screens from 850px and down*/
 
 
-        font-size: 110%;
-        text-align: center;
-        color: bisque;
-        left:50px;
+#castle-title{
+    background-color: transparent;
+    border:none;
 
-
-
-
-    }
-
-    #info-text {
-        top: 20px;
-        width: 50%;
-        text-transform: capitalize;
-    }
-
-    #info-text>h2 {
-        font-size: 80%;
-        padding: 0;
-    }
-
-    #info-text-sm {
+}
+#about-lackeen{
+    height:1000px;
+}
+#about-lackeen-text {
+    clear: left;
         width: 80%;
-        background-color: transparent;
-        border: none;
-    }
-
-    #info-text h2 {
-
-        color: rgba(94, 36, 36, 1);
-        text-transform: capitalize;
-        text-align: center;
-        font-size: 200%;
-
-    }
-
-   #sm-summary {
-        height: 1200px;
-        margin: 0 auto;
-
-    }
-    #sm-pics h2 {
-
-        text-transform: capitalize;
-        letter-spacing:none;
-    }
-
-    .left-about-heading-sm {
-        width: 85%;
-        text-align: left;
-
-        line-height: 20px;
-        margin-right: 30px;
-        margin-bottom: 50px;
-    }
-
-    .right-about-heading-sm {
-        width: 85%;
-
-
-        line-height: 20px;
-        clear: both;
-        margin-left: 30px;
-        margin-bottom: 50px;
-    }
-
-    .right-about-heading-sm p {
-        text-align: left;
-    }
-
-    .left-about-heading-sm h2,
-    .right-about-heading-sm h2 {
-        text-align: left;
-        padding-bottom: 20px;
-    }
-
-    #lackeen-intro {
-        text-transform: capitalize;
-    }
-
-    #sm-pics {
-        height: 1700px;
-    }
-
-    div.sm-gallery {
-        width: 300px;
-        height: 500px;
-        margin: 10px 30px;
-    }
-
+    font-size: 120%;
+    max-width: 90%;
+ padding-left:50px;
     
-
-    .contact-form {
-        margin-top: 20px;
-    }
-
-    .contact-form>h2 {
-        text-transform: capitalize;
-        text-align: center;
-        font-size: 120%;
-    }
-
-    .join-button {
-        margin: 0 auto;
-    }
-
-    #info-text-fdest {
-
-        font-size: 130%;
-        font-family: eczar, serif;
-        text-transform: capitalise;
-
-        text-align: center;
-
-        padding: 10px auto;
+}
 
 
-        height: 200px;
-        width: 40%;
 
-        bottom: 100px;
-        left: 30px;
 
-        color: rgba(94, 36, 36, 1);
-        background-color: transparent;
-        position: absolute;
-        border: none;
+#about-lackeen-image {
+clear: right;
+width : 80%;
+max-width:90%;
+margin: 20px 20px 20px 30px;
+padding-right:80px;
+border-radius: 0;
 
-    }
+}
 
-    #info-text-fdest>h2 {
-        color: rgba(94, 36, 36, 1);*/
-    
+#defence-window {
+    width:40%;
 
-    
+}
+
+#defence-mach{
+    width:40%;
+    height:200px;
+    top:280px;
+
+}
+
+#defence-door{
+    bottom:60px;
+    height:200px;
+
+}
+#defence-intro{
+    height:300px;
+}
+
+
+
