--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -311,54 +311,47 @@ iframe {
 
  /* about stowe missal*/
  #about-sm {
-    min-height:600px;
+    min-height: 1200px;
     display:block;
     width:100%;
     position:relative;
-    box-sizing: border-box;
+    
     margin-bottom: 80px;
 
 }
 
-#sm-cover{
 
-    min-height:600px;
-    display: block;
-    width:100%;
-    position: relative;
-    box-sizing: border-box;
-    margin-bottom: 80px;
-}
 #about-sm > h2 {
     padding-bottom: 15px;
     }
     
 
-#about-sm-text {
+#sm-text {
 float: left;
 padding-top: 50px;
 width: 60%;
-
+box-sizing: border-box;
 max-width: 50%;
 padding-left: 30px;
 color:bisque;
 }
-#about-sm-text > p {
+#sm-text > p {
     padding-left: 20px;
     max-width: 95%;
     }
     
 
-#about-sm-image {
+#sm-image {
 float: right;
-width: 35%;
+width: 45%;
 max-height: 600px;
-margin: 20px 50px 0px 0px;
+margin: 50px 30px 0px 0px;
 overflow: hidden;
+box-sizing: content-box;
 
 }
 
-#about-sm-image > img {
+#sm-image > img {
 height: auto;
 width: 60%;
 }
@@ -369,34 +362,35 @@ width: 60%;
     text-align:left;
 }
 
-#about-sm-cover-text {
+#cover-text {
     text-align: left;
-    float: right;
+    float: left;
     padding-top: 10px;
     width: 50%;
     font-size: 100%;
     max-width: 50%;
-    padding-right: 30px;
+    padding-left: 30px;
     color:bisque;
+    box-sizing:content-box;
     }
-    #about-sm-cover-text > p {
+    #cover-text > p {
         padding-right: 50px;
         max-width: 75%;
         margin-bottom: 80px;
         }
        
-    #about-sm-cover-image {
+    #cover-image {
     float: left;
     width: 45%;
     max-height: 600px;
     margin: 50px 0px 0px 50px;
     overflow: hidden;
-    
+    box-sizing: border-box;
     }
     
-    #about-sm-cover-image > img {
+    #cover-image > img {
     height: auto;
-    width: 50%;
+    width: 45%;
     }
     
     
