--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -690,8 +690,8 @@ footer > h5{
 
 #submit:hover {
     border: 3px solid #fdf9ee;
-    background-color: #1B3D2F;
-    color: #fdf9ee;
+    background-color: bisque;
+    color: #00008b;
 }
 
 
@@ -723,7 +723,7 @@ footer > h5{
     width: 100%;
     height: 25px;
     margin: 5px 0 20px 0;
-    border: 2px solid bisque;
+    border: 2px solid darkred;
     border-radius: 5px;
 }
 
@@ -733,7 +733,7 @@ footer > h5{
     width: 50%;
     height: 25px;
     margin: 5px 0 20px 0;
-    border: 2px solid bisque;
+    border: 2px solid darkred;
     border-radius: 5px;
 }
 
@@ -743,7 +743,7 @@ footer > h5{
     width: 25%;
     height: 30px;
     margin: 5px 0 20px 0;
-    border: 2px solid bisque;
+    border: 2px solid darkred;
     border-radius: 5px;
 
 }
@@ -754,7 +754,7 @@ footer > h5{
     width: 80%;
     height: 100px;
     margin: 5px 0 20px 0;
-    border: 2px solid bisque;
+    border: 2px solid darkred;
     border-radius: 5px;
 
 }
